--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
       addBlock(block("bg-blue-50", "9:00 – Safety", "", "Mardi 9/09"));
       addBlock(block("bg-white", "09:15 – Culture Managériale", "Notre Levier de Réussite (Postures, Pratiques, Performance)"));
 
-      const ateliers = ["At1", "At2", "At3"];
+      const ateliers = ["1", "2", "3"];
       ateliers.forEach((at, i) => {
-        const salle = urlParams.get(`J2_${at}_Salle`);
-        const table = urlParams.get(`J2_${at}_Table`);
+        const salle = urlParams.get(`J2_${at}_S`);
+        const table = urlParams.get(`J2_${at}_T`);
         if (salle && table) {
           addBlock(block("bg-white", `Atelier ${i+1}`, `Salle : ${salle}, Table : ${table}`));
         }
       });
 
-      const team = urlParams.get("J2_Team_Groupe");
+      const team = urlParams.get("J2_4_G");
       if (team) {
         addBlock(block("bg-white", "14:15 – Team Building", `Groupe : ${team}`));
       }
@@ -97,7 +97,7 @@
 
       // Jour 3
       const j3 = ateliers.map((at, i) => {
-        const salle = urlParams.get(`J3_${at}_Salle`);
+        const salle = urlParams.get(`J3_${at}_S`);
         return salle ? `Atelier ${i+1} : <span class='font-medium text-blue-700'>${salle}</span>` : null;
       }).filter(Boolean).join("<br>");
 
