--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Livret d'accueil - Séminaire La Rochelle</title>
+  <script src="https://kit.fontawesome.com/abef069671.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
@@ -73,4 +74,5 @@
 </script>
 </body>
 </html>
+
 
