--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
         <a id="livret-link" href="#" class="inline-block mt-6">
           <button type="button" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-full px-6 py-2 transition">
-            📘 Livret d'accueil
+            <i class="fa-solid fa-book"></i> Livret d'accueil
           </button>
         </a>
       </div>
 
       <section class="bg-white shadow-md rounded-xl p-6 mb-10">
-        <h2 class="text-2xl font-semibold text-blue-700 mb-4">📅 Mon agenda</h2>
+        <h2 class="text-2xl font-semibold text-blue-700 mb-4"><i class="fa-solid fa-calendar"></i> Mon agenda</h2>
         <ol class="space-y-6" id="agenda"></ol>
       </section>
     </div>
