--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -10,7 +10,7 @@
 <body class="bg-white text-gray-800 font-sans">
 <a id="btn-retour" href="#" class="fixed top-4 left-4 z-50">
   <button class="bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-full px-4 py-2 text-sm shadow-lg">
-    	Retour à mon programme
+    	<i class="fa-solid fa-arrow-left"></i> Retour à mon programme
   </button>
 </a>
   <!-- PAGE 1 -->
@@ -74,5 +74,6 @@
 </script>
 </body>
 </html>
+
 
 
