--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -9,12 +9,12 @@
 </head>
 <body class="bg-white text-gray-800 font-sans">
 <a id="btn-retour" href="#" class="fixed top-4 left-4 z-50">
-  <button class="bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-full px-4 py-2 text-sm shadow-lg">
+  <button class="bg-red-600 hover:bg-red-700 text-white font-semibold rounded-full px-4 py-2 text-sm shadow-lg">
     	<i class="fa-solid fa-arrow-left"></i> Retour à mon programme
   </button>
 </a>
   <!-- PAGE 1 -->
-  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-12 bg-gradient-to-br from-blue-50 to-white">
+  <section class="min-h-screen flex flex-col justify-center items-center text-center px-6 py-12 bg-gradient-to-br from-red-50 to-white">
         <img src="https://cdn.primagaz.fr/-/media/sites/france/settings/primagaz.svg" alt="Logo Séminaire" class="w-24 mb-8 h-auto" />
 	<h1 class="text-3xl md:text-5xl font-bold mb-2">PROGRAMME SÉMINAIRE STRATÉGIQUE</h1>
     <p class="text-xl mb-4 text-gray-500">baseline du séminaire</p>
@@ -27,14 +27,14 @@
 
   <!-- PAGE 2 -->
   <section class="px-6 py-12 max-w-3xl mx-auto space-y-6">
-    <h2 class="text-2xl font-bold text-blue-700">Arrivée & Check-out</h2>
+    <h2 class="text-2xl font-bold text-red-700">Arrivée & Check-out</h2>
     <p>Lundi 8 septembre, à votre arrivée, vous pourrez déposer vos bagages en bagagerie et les récupérer ainsi que vos clés de chambres à la fin de la plénière à 18h.</p>
     <p>Mercredi 10 septembre, check out : Dès xh, vous pourrez déposer vos bagages dans l’espace bagagerie et rendre votre clé de chambre à l’accueil.</p>
-    <p class="bg-gray-100 border-l-4 border-blue-400 p-4 rounded">
+    <p class="bg-gray-100 border-l-4 border-red-400 p-4 rounded">
       <strong>Code wifi de l’hôtel :</strong> <em>à insérer</em>
     </p>
-    <h3 class="text-xl font-semibold text-blue-600 mt-10">Q&A MERCREDI DE 11H30 A 12H30</h3>
-    <div class="bg-blue-50 p-4 rounded shadow">
+    <h3 class="text-xl font-semibold text-red-600 mt-10">Q&A MERCREDI DE 11H30 A 12H30</h3>
+    <div class="bg-red-50 p-4 rounded shadow">
       <p class="mb-2">Un espace de questions-réponses (Q&A) est ouvert pendant toute la durée du séminaire pour recueillir les questions que vous souhaitez poser au Comité de Direction.</p>
       <p class="mb-2">Celles-ci seront abordées lors d’une session dédiée d’une heure, prévue mercredi de 11h30 à 12h30. Le Q&A fermera mardi 9 septembre à 21h.</p>
       <p class="mb-2">Cette initiative vise à répondre de manière transparente à vos interrogations sur la stratégie et l’actualité de l’entreprise.</p>
@@ -44,7 +44,7 @@
 
   <!-- DERNIERE PAGE -->
   <section class="px-6 py-12 max-w-3xl mx-auto space-y-6">
-    <h2 class="text-2xl font-bold text-blue-700">INFOS PRATIQUES</h2>
+    <h2 class="text-2xl font-bold text-red-700">INFOS PRATIQUES</h2>
 
     <div>
       <h3 class="text-lg font-semibold mb-1">REPAS</h3>
@@ -63,10 +63,10 @@
     <div>
       <h3 class="text-lg font-semibold mb-1">COMMUNICATION</h3>
       <p class="text-sm">Les photos/ videos faites pendant le séminaire seront partagées sur un sharepoint. <br>
-		Si vous souhaitez ajouter vos propres photos dans ce dossier, n’hésitez pas à les transmettre à <a href="mailto:communicationinterne@primagaz.fr" class="text-blue-600">communicationinterne@primagaz.fr</a> ou via WhatsApp « Séminaire La Rochelle septembre 25 ».<br>Merci bien sûr de ne pas utiliser ces photos en externe et de respecter droit d’image, respect d’utilisation et confidentialité. Nous vous remercions de ne faire aucune publication de ce séminaire sur les réseaux sociaux.</p>
+		Si vous souhaitez ajouter vos propres photos dans ce dossier, n’hésitez pas à les transmettre à <a href="mailto:communicationinterne@primagaz.fr" class="text-red-600">communicationinterne@primagaz.fr</a> ou via WhatsApp « Séminaire La Rochelle septembre 25 ».<br>Merci bien sûr de ne pas utiliser ces photos en externe et de respecter droit d’image, respect d’utilisation et confidentialité. Nous vous remercions de ne faire aucune publication de ce séminaire sur les réseaux sociaux.</p>
     </div>
 
-    <p class="text-center text-blue-800 font-semibold mt-10">ON EST RAVI DE VIVRE AVEC VOUS CE SÉMINAIRE !<br><span class="text-sm text-gray-500">baseline du séminaire</span></p>
+    <p class="text-center text-red-800 font-semibold mt-10">ON EST RAVI DE VIVRE AVEC VOUS CE SÉMINAIRE !<br><span class="text-sm text-gray-500">baseline du séminaire</span></p>
   </section>
 <script>
   const retour = document.getElementById("btn-retour");
@@ -74,6 +74,7 @@
 </script>
 </body>
 </html>
+
 
 
 
