--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       addBlock(block("bg-red-50", "14:30 – Contexte Primagaz", "Ecosystem de Primagaz aujourd'hui"));
       addBlock(block("bg-red-50", "15:10 – Look Back", "Mise à l’honneur collaborateurs / équipes"));
       addBlock(block("bg-red-50", "16:00 – Primagaz d'aujourd'hui à demain"));
-      addBlock(block("bg-green-50", "18:55 – Soirée", "1er retour : 23h25<br>2nd retour : 23h55"));
+      addBlock(block("bg-[#0A2342]", "18:55 – Soirée", "1er retour : 23h25<br>2nd retour : 23h55"));
 
       // Jour 2
       addBlock(block("bg-red-50", "9:00 – Safety", "", "Mardi 9/09"));
@@ -92,8 +92,8 @@
         addBlock(block("bg-white", "14:15 – Team Building", `Groupe : ${team}`));
       }
 
-      addBlock(block("bg-green-50", "18:15 – Inclusivité chez PZ"));
-      addBlock(block("bg-green-50", "20:45 – Soirée"));
+      addBlock(block("bg-[#0A2342]", "18:15 – Inclusivité chez PZ"));
+      addBlock(block("bg-[#0A2342]", "20:45 – Soirée"));
 
       // Jour 3
       agenda.insertAdjacentHTML('beforeend', `
