--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       // Jour 2
       addBlock(block("bg-red-50", "9:00 – Safety", "", "Mardi 9/09"));
-      addBlock(block("bg-white", "09:15 – Culture Managériale", "Notre Levier de Réussite (Postures, Pratiques, Performance)"));
+      addBlock(block("bg-red-50", "09:15 – Culture Managériale", "Notre Levier de Réussite (Postures, Pratiques, Performance)"));
 
       const ateliers = ["1", "2", "3"];
       ateliers.forEach((at, i) => {
