--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -26,7 +26,7 @@
     <h1 class="text-3xl md:text-5xl font-bold mb-2">PROGRAMME SÉMINAIRE STRATÉGIQUE</h1>
     <p class="text-xl mb-4 text-gray-200">baseline du séminaire</p>
     <p class="text-lg mb-1">8 – 10 septembre</p>
-    <p class="text-lg">La Rochelle</p>
+    <p class="text-lg"><i class="fa-solid fa-location-dot"></i> La Rochelle</p>
   </div>
 
   <!-- Flèche animée -->
@@ -90,6 +90,7 @@
 </script>
 </body>
 </html>
+
 
 
 
