--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -36,7 +36,7 @@
 
   <!-- Footer contact -->
   <footer class="absolute bottom-2 text-xs text-gray-200 text-center z-10 px-4">
-    Un problème ? Contactez Marie-Agnès Linard au 06 08 27 39 01 ou Tom Charbonnel au XXX
+    Un problème ? Besoin d’info ? Contactez Marie-Agnès Linard au 06 08 27 39 01 ou Tom Charbonnel au XXX
   </footer>
 </section>
 
@@ -90,6 +90,7 @@
 </script>
 </body>
 </html>
+
 
 
 
