--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -22,17 +22,19 @@
 
   <!-- Contenu -->
   <div class="relative z-10 flex flex-col items-center">
-    <img src="https://cdn.primagaz.fr/-/media/sites/france/settings/primagaz.svg" alt="Logo Séminaire" class="w-24 mb-8 h-auto" />
+    <div class="bg-white rounded-full p-2 shadow-lg mb-8">
+	  <img src="https://cdn.primagaz.fr/-/media/sites/france/settings/primagaz.svg" alt="Logo Séminaire" class="w-24 h-auto" />
+    </div>
+
     <h1 class="text-3xl md:text-5xl font-bold mb-2">PROGRAMME SÉMINAIRE STRATÉGIQUE</h1>
     <p class="text-xl mb-4 text-gray-200">baseline du séminaire</p>
     <p class="text-lg mb-1">8 – 10 septembre</p>
     <p class="text-lg"><i class="fa-solid fa-location-dot"></i> La Rochelle</p>
   </div>
 
-  <!-- Flèche animée -->
-  <div class="absolute bottom-8 left-1/2 -translate-x-1/2 z-10">
+  <a href="#section2" class="absolute bottom-6 animate-bounce text-white text-3xl">
     <i class="fa-solid fa-chevron-down text-white text-2xl animate-bounce"></i>
-  </div>
+  </a>
 
   <!-- Footer contact -->
   <footer class="absolute bottom-2 text-xs text-gray-200 text-center z-10 px-4">
@@ -90,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
