--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -44,7 +44,7 @@
 
 
   <!-- PAGE 2 -->
-  <section class="px-6 py-12 max-w-3xl mx-auto space-y-6">
+  <section id="section2" class="px-6 py-12 max-w-3xl mx-auto space-y-6">
     <h2 class="text-2xl font-bold text-red-700">Arrivée & Check-out</h2>
     <p>Lundi 8 septembre, à votre arrivée, vous pourrez déposer vos bagages en bagagerie et les récupérer ainsi que vos clés de chambres à la fin de la plénière à 18h.</p>
     <p>Mercredi 10 septembre, check out : Dès xh, vous pourrez déposer vos bagages dans l’espace bagagerie et rendre votre clé de chambre à l’accueil.</p>
@@ -92,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
