--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -27,7 +27,7 @@
     </div>
 
     <h1 class="text-3xl md:text-5xl font-bold mb-2">PROGRAMME SÉMINAIRE STRATÉGIQUE</h1>
-    <p class="text-xl mb-4 text-gray-200">baseline du séminaire</p>
+    <p class="text-xl mb-4 text-gray-200">Unis pour performer, Energisés pour réussir, <br>Cap sur 2028 </p>
     <p class="text-lg mb-1">8 – 10 septembre</p>
     <p class="text-lg"><i class="fa-solid fa-location-dot"></i> La Rochelle</p>
   </div>
@@ -92,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
