--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -84,7 +84,7 @@
 		Si vous souhaitez ajouter vos propres photos dans ce dossier, n’hésitez pas à les transmettre à <a href="mailto:communicationinterne@primagaz.fr" class="text-red-600">communicationinterne@primagaz.fr</a> ou via WhatsApp « Séminaire La Rochelle septembre 25 ».<br>Merci bien sûr de ne pas utiliser ces photos en externe et de respecter droit d’image, respect d’utilisation et confidentialité. Nous vous remercions de ne faire aucune publication de ce séminaire sur les réseaux sociaux.</p>
     </div>
 
-    <p class="text-center text-red-800 font-semibold mt-10">ON EST RAVI DE VIVRE AVEC VOUS CE SÉMINAIRE !<br><span class="text-sm text-gray-500">baseline du séminaire</span></p>
+    <p class="text-center text-red-800 font-semibold mt-10">ON EST RAVI DE VIVRE AVEC VOUS CE SÉMINAIRE !<br><span class="text-sm text-gray-500">Unis pour performer, Energisés pour réussir, <br>Cap sur 2028</span></p>
   </section>
 <script>
   const retour = document.getElementById("btn-retour");
@@ -92,6 +92,7 @@
 </script>
 </body>
 </html>
+
 
 
 
