--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="text-4xl font-bold text-gray-900">
           Bienvenue <span id="nom" class="text-red-600">Participant</span>
         </h1>
-        <p class="text-gray-600 mt-2">Voici votre programme personnalisé pour le séminaire.</p>
+        <p class="text-gray-600 mt-2">La Rochelle, 8-10 septembre 2025</p>
 
         <a id="livret-link" href="#" class="inline-block mt-6">
           <button type="button" class="bg-red-600 hover:bg-red-700 text-white font-semibold rounded-full px-6 py-2 transition">
