--- a/livret-accueil.html
+++ b/livret-accueil.html
@@ -2,105 +2,157 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Livret d'accueil - Séminaire La Rochelle</title>
-  <script src="https://kit.fontawesome.com/abef069671.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Livret d'accueil — Séminaire La Rochelle</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .wrap { max-width: 920px; margin-inline: auto; }
+	.ratio { position: relative; width: 100%; padding-bottom: 75%; }
+	.ratio > iframe { position: absolute; inset: 0; width: 100%; height: 100%; border: 0; border-radius: .75rem; }
+    html { scroll-behavior: smooth; }
+    .anchor { scroll-margin-top: 5rem; }
+  </style>
 </head>
-<body class="bg-white text-gray-800 font-sans">
-<a id="btn-retour" href="#" class="fixed top-4 left-4 z-50">
-  <button class="bg-red-600 hover:bg-red-700 text-white font-semibold rounded-full px-4 py-2 text-sm shadow-lg">
-    	<i class="fa-solid fa-arrow-left"></i> Retour à mon programme
-  </button>
-</a>
-  <!-- PAGE 1 -->
-<section class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 py-12 text-white"
-  style="background-image: url('https://images.unsplash.com/photo-1617111641010-39cc2d207f4b'); background-size: cover; background-position: center;">
-  
-  <!-- Overlay sombre pour lisibilité -->
-  <div class="absolute inset-0 bg-black/40 z-0"></div>
+<body class="bg-white text-gray-800">
 
-  <!-- Contenu -->
-  <div class="relative z-10 flex flex-col items-center">
-    <div class="bg-white rounded-full p-2 shadow-lg mb-8">
-	  <img src="https://cdn.primagaz.fr/-/media/sites/france/settings/primagaz.svg" alt="Logo Séminaire" class="w-24 h-auto" />
+  <!-- Header -->
+  <header class="sticky top-0 z-40 bg-white/90 backdrop-blur border-b border-gray-100">
+    <div class="wrap px-4 py-3 flex items-center gap-3">
+      <a id="btn-retour" href="#" class="shrink-0">
+        <span class="inline-flex items-center rounded-full bg-red-600 text-white text-xs md:text-sm px-3 py-2">
+          ← Retour à mon programme
+        </span>
+      </a>
+      <div class="ml-auto text-right leading-tight">
+        <div class="text-xs text-gray-500">Séminaire Stratégie 2025 <br> La Rochelle</div>
+        <div class="font-semibold">8–10 septembre 2025</div>
+      </div>
     </div>
+  </header>
 
-    <h1 class="text-3xl md:text-5xl font-bold mb-2">PROGRAMME SÉMINAIRE STRATÉGIQUE</h1>
-    <p class="text-xl mb-4 text-gray-200">Unis pour performer,<br>Energisés pour réussir, <br>Cap sur 2028 </p>
-    <p class="text-lg mb-1">8 – 10 septembre</p>
-    <p class="text-lg"><i class="fa-solid fa-location-dot"></i> La Rochelle</p>
+  <!-- Hero -->
+  <section class="wrap px-4 pt-8 pb-6">
+    <div class="rounded-2xl overflow-hidden">
+      <div class="relative min-h-[38vh] sm:min-h-[44vh] grid place-items-center text-center text-white"
+           style="background:url('https://images.unsplash.com/photo-1617111641010-39cc2d207f4b') center/cover no-repeat;">
+        <div class="absolute inset-0 bg-black/40"></div>
+        <div class="relative z-10 space-y-2 px-4">
+          <img src="https://cdn.primagaz.fr/-/media/sites/france/settings/primagaz.svg" alt="Primagaz"
+               class="w-20 sm:w-24 mx-auto mb-2 bg-white rounded-full p-2 shadow" />
+          <h1 class="text-2xl sm:text-4xl font-bold">Livret d’accueil</h1>
+          <p class="text-sm sm:text-base text-gray-200">Unis pour performer • Énergisés pour réussir • Cap sur 2028</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Besoin d'info + Boutons -->
+  <div class="wrap px-4 pb-6 text-center text-sm text-gray-600 space-y-4">
+    <p>
+      Besoin d’info ? Contactez <strong>Marie-Agnès Linard</strong> (06 08 27 39 01) • 
+      <strong>Tom Charbonnel</strong> (06 95 63 31 78)
+    </p>
+	<div class="flex justify-center gap-6">
+	  <!-- Bouton WhatsApp -->
+	  <a href="https://primagaz.cc/whatsapp-seminaire2025" target="_blank"
+		 class="group flex flex-col items-center">
+		<div class="w-14 h-14 sm:w-16 sm:h-16 flex items-center justify-center rounded-full bg-green-500 shadow-md transition transform group-hover:scale-110 group-hover:shadow-lg">
+		  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+			   alt="WhatsApp" class="w-7 h-7 sm:w-8 sm:h-8" />
+		</div>
+		<span class="text-xs mt-2 font-medium text-gray-700 group-hover:text-green-600">WhatsApp</span>
+	  </a>
+
+	  <!-- Bouton Q&A -->
+	  <a href="https://primagaz.cc/qa-seminaire-pz-2025" target="_blank"
+		 class="group flex flex-col items-center">
+		<div class="w-14 h-14 sm:w-16 sm:h-16 flex items-center justify-center rounded-full bg-red-500 text-white text-lg font-bold shadow-md transition transform group-hover:scale-110 group-hover:shadow-lg">
+		  ?
+		</div>
+		<span class="text-xs mt-2 font-medium text-gray-700 group-hover:text-red-600">Q&A</span>
+	  </a>
+	</div>
+
   </div>
 
-  <a href="#section2" class="absolute bottom-6 animate-bounce text-white text-3xl">
-    <i class="fa-solid fa-chevron-down text-white text-2xl animate-bounce"></i>
-  </a>
+  <!-- Sections -->
+  <main class="wrap px-4 pb-16 space-y-10">
 
-  <!-- Footer contact -->
-  <footer class="absolute bottom-2 text-xs text-gray-200 text-center z-10 px-4">
-    Un problème ? Besoin d’info ? Contactez Marie-Agnès Linard au 06 08 27 39 01 ou Tom Charbonnel au XXX
-  </footer>
-</section>
+    <section id="arrivee" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Arrivée & Check-out</h2>
+      <p><strong>Lundi 8 septembre :</strong> déposez vos bagages en bagagerie et récupérez vos clés de chambre à la fin de la plénière (18h).</p>
+      <p><strong>Mercredi 10 septembre :</strong> check-out avant <strong>9h</strong>, bagagerie et restitution des clés à l’accueil.</p>
+    </section>
 
+    <section id="wifi" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Wi-Fi de l’hôtel</h2>
+      <p><strong>Réseau :</strong> ACCORHOTELS-GUEST<br><strong>Connexion :</strong> via votre adresse e-mail.</p>
+    </section>
 
-  <!-- PAGE 2 -->
-  <section id="section2" class="px-6 py-12 max-w-3xl mx-auto space-y-6">
-    <h2 class="text-2xl font-bold text-red-700">Arrivée & Check-out</h2>
-    <p>Lundi 8 septembre, à votre arrivée, vous pourrez déposer vos bagages en bagagerie et les récupérer ainsi que vos clés de chambres à la fin de la plénière à 18h.</p>
-    <p>Mercredi 10 septembre, check out : Dès xh, vous pourrez déposer vos bagages dans l’espace bagagerie et rendre votre clé de chambre à l’accueil.</p>
-    <p class="bg-gray-100 border-l-4 border-red-400 p-4 rounded">
-      <strong>Code wifi de l’hôtel :</strong> <em>à insérer</em>
-    </p>
-    <h3 class="text-xl font-semibold text-red-600 mt-10">Q&A MERCREDI DE 11H30 A 12H30</h3>
-    <div class="bg-red-50 p-4 rounded shadow">
-      <p class="mb-2">Un espace de questions-réponses (Q&A) est ouvert pendant toute la durée du séminaire pour recueillir les questions que vous souhaitez poser au Comité de Direction.</p>
-      <p class="mb-2">Celles-ci seront abordées lors d’une session dédiée d’une heure, prévue mercredi de 11h30 à 12h30. Le Q&A fermera mardi 9 septembre à 21h.</p>
-      <p class="mb-2">Cette initiative vise à répondre de manière transparente à vos interrogations sur la stratégie et l’actualité de l’entreprise.</p>
-      <p><strong>N’hésitez pas à y contribuer :</strong> cette session est avant tout la vôtre !</p>
-    </div>
-  </section>
+    <section id="carte" class="anchor space-y-3">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Carte des lieux</h2>
+      <div class="ratio">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1v6b1Bj7FD2YEZzJZGo_FMpZ9r0xZ4Bk&ehbc=2E312F"
+                allowfullscreen loading="lazy"></iframe>
+      </div>
+    </section>
 
-  <!-- DERNIERE PAGE -->
-  <section class="px-6 py-12 max-w-3xl mx-auto space-y-6">
-    <h2 class="text-2xl font-bold text-red-700">INFOS PRATIQUES</h2>
-
-    <div>
-      <h3 class="text-lg font-semibold mb-1">REPAS</h3>
-      <p class="text-sm">Déjeuner assis, pique-nique face à la mer, cocktails dinatoires, la diversité est au rendez-vous, tout comme le local, la fraicheur, le goût et le respect des différents régimes alimentaires que vous nous avez indiqués. N’hésitez pas à les rappeler au moment du service.</p>
-    </div>
-
-    <div>
-      <h3 class="text-lg font-semibold mb-1">RECOMMANDATIONS VESTIMENTAIRES</h3>
-      <ul class="list-disc ml-6 text-sm">
-        <li>Pour la soirée de lundi, prévoyez pull ou veste en cas de brise marine ;</li>
-        <li>Pour l’activité « Et si on jouait à Fort Boyard », prévoyez vêtements et chaussures (tennis idéalement) de loisir, adaptés à la chaleur ambiante et dans lesquels vous pourrez bouger confortablement en extérieur comme en intérieur ;</li>
-        <li>Pour la soirée de mercredi, sortez vos accessoires de corsaire, vos bustiers de sirène et votre imagination débordante pour revêtir les atours des créatures marines qui vous entoureront…</li>
+    <section id="safety" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Safety First</h2>
+      <ul class="list-disc ml-5 space-y-1">
+        <li>Réfléchissons avant d’agir</li>
+        <li>Veillons les uns sur les autres</li>
+        <li>Signalons tout incident ou danger</li>
+        <li>Respectons les consignes données</li>
+        <li>Regardons avant de traverser la rue</li>
       </ul>
-    </div>
+    </section>
 
-    <div>
-      <h3 class="text-lg font-semibold mb-1">COMMUNICATION</h3>
-      <p class="text-sm">Les photos/ videos faites pendant le séminaire seront partagées sur un sharepoint. <br>
-		Si vous souhaitez ajouter vos propres photos dans ce dossier, n’hésitez pas à les transmettre à <a href="mailto:communicationinterne@primagaz.fr" class="text-red-600">communicationinterne@primagaz.fr</a> ou via WhatsApp « Séminaire La Rochelle septembre 25 ».<br>Merci bien sûr de ne pas utiliser ces photos en externe et de respecter droit d’image, respect d’utilisation et confidentialité. Nous vous remercions de ne faire aucune publication de ce séminaire sur les réseaux sociaux.</p>
-    </div>
+    <section id="ensemble" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Ensemble</h2>
+      <ul class="list-disc ml-5 space-y-1">
+        <li>Gardons le contrôle face à l’alcool</li>
+        <li>Respectons nos collègues en toute occasion</li>
+        <li>Soyons ponctuels aux rendez-vous</li>
+        <li>Participons activement et dans la bonne humeur</li>
+      </ul>
+    </section>
 
-    <p class="text-center text-red-800 font-semibold mt-10">ON EST RAVI DE VIVRE AVEC VOUS CE SÉMINAIRE !<br><span class="text-sm text-gray-500">Unis pour performer,<br>Energisés pour réussir, <br>Cap sur 2028</span></p>
-  </section>
-<script>
-  const retour = document.getElementById("btn-retour");
-  retour.href = "index.html" + window.location.search; 
-</script>
+    <section id="qa" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Q&A</h2>
+      <p>Un <a href="https://primagaz.cc/qa-seminaire-pz-2025" target="_blank" class="text-blue-700">espace numérique</a> recueille vos questions pour le Comité de Direction. Session prévue <strong>mercredi 11h25 → 12h25</strong>.</p>
+      <p>Clôture des questions : <strong>mardi 9 septembre à 21h</strong>.</p>
+    </section>
+
+    <section id="com" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Communication</h2>
+      <p>Partagez vos photos/vidéos sur le <a href="https://primagaz.cc/whatsapp-seminaire2025" class="text-blue-700" target="_blank"><strong>WhatsApp du séminaire</strong></a>. Merci de ne pas publier en externe ni sur les réseaux sociaux (droit à l’image & confidentialité).</p>
+    </section>
+
+    <section id="repas" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Repas</h2>
+      <p>Déjeuners, pique-nique face à la mer, cocktails dinatoires : diversité, local, fraîcheur et respect des régimes. Pensez à les rappeler au service.</p>
+    </section>
+
+    <section id="tenue" class="anchor space-y-2">
+      <h2 class="text-lg sm:text-xl font-semibold text-red-700">Recommandations vestimentaires</h2>
+      <ul class="list-disc ml-5 space-y-1">
+        <li>Lundi soir : pull/veste (brise marine).</li>
+        <li>Activité « Fort Boyard » : tenue loisir + chaussures confortables.</li>
+        <li>Mardi soir : « Corsaires, sirènes & créatures marines ».</li>
+      </ul>
+    </section>
+
+    <section class="text-center pt-4">
+      <p class="text-red-700 font-semibold text-base sm:text-lg">On est ravi de vivre ensemble ce séminaire !</p>
+      <p class="text-xs sm:text-sm text-gray-500 mt-1">Unis pour performer • Énergisés pour réussir • Cap sur 2028</p>
+    </section>
+
+  </main>
+
+  <script>
+    const retour = document.getElementById("btn-retour");
+    retour.href = "index.html" + window.location.search;
+  </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
